--- a/index.css
+++ b/index.css
@@ -1,47 +1,25 @@
-body{
-    background-color: rgb(45,211,111);
+body {
+    background: rgb(45, 211, 111);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-form{
+form {
     width: 300px;
 }
-input{
+input {
     border: none;
 }
-input, button{
-    padding: 10px;
+input,
+button {
+   padding: 10px;
+   width: -webkit-fill-available;
+}
+button {
     margin-bottom: 10px;
-    width:  -webkit-fill-available;
-}
-button{
-    cursor: pointer; 
-}
-button:active{
-    opacity: 0.8;
-}
-button[disabled] {
-    opacity: 0.8;
-}
-.clear{
-    background: transparent;
-    border: none;
-    color: white;
-}
-.solid{
-    background: white;
-    border: none;
-}
-.outline{
-    background: transparent;
-    color: white;
-    border: 1px, solid, white;
 }
 
-.error{
-    color: white;
-    background: red;
-    display: none;
+.form-field {
+    margin-bottom: 10px;
 }
