Tela de registro

--- a/global.css
+++ b/global.css
@@ -49,3 +49,13 @@ button[disabled] {
     color: white;
     display: none;
 } 
+
+.form-field {
+    margin-bottom: 10px;
+}
+
+input,
+button {
+   padding: 10px;
+   width: -webkit-fill-available;
+}
